samples/_failures_safe/1761218581_6d07a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_acd22adc.c: In function ‘main’:
./samples/SAFE/__tmp_acd22adc.c:151:21: error: expected declaration or statement at end of input
  151 |                     print_matrix(&result, "A * B");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_acd22adc.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_acd22adc.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_acd22adc.c:151:21: error: expected declaration or statement at end of input
